istio-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
  - argo-gateway
  hosts:
  - "*"
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: weather-test-app-hyd # referenced in canary.stableService
      weight: 25
    - destination:
        host: weather-test-app-ny # referenced in canary.canaryService
      weight: 75
